tests/NormalTests/paczka1/fuzzy1/73893499.err
Error in line 10: dsm A502 29,8
Error in line 6: j0fl S248 28,5
Error in line 37: bgKp15yNK4 S518 38,1
Error in line 35: S248 S248 23,5
